create movie repository and load MatchOptionsGenerationStrategy with imdb movies, refactor MatchOptionsGenerationStrategy